--- a/frontend/src/components/Details/Details.css
+++ b/frontend/src/components/Details/Details.css
@@ -45,3 +45,31 @@
 .goods-desc-data{
 
 }
+
+.button {
+    display: inline-block;
+    padding: 0.6em 1.2em;
+    border-radius: 4px; /* 按钮圆角 */
+    font-size: 1rem; /* 字体大小 */
+    font-weight: bold; /* 字体加粗 */
+    text-align: center;
+    text-transform: uppercase; /* 转换为大写字母 */
+    color: #fff; /* 文字颜色 */
+    background-color: #007aff; /* 按钮背景色 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* 阴影效果，可以根据需要自行调整 */
+    transition: background-color 0.3s ease; /* 渐变过渡效果 */
+    margin-top: 25px;
+}
+
+/* 鼠标悬停状态 */
+.button:hover {
+    background-color: #0053ba;
+}
+
+/* 激活状态 */
+.button:active {
+    background-color: #0053ba;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+
